; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_vga.c_map_font_memory.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_vga.c_map_font_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GRAPHICS = common dso_local global i32 0, align 4
@GRREGENABLESETRESET = common dso_local global i32 0, align 4
@oldgraphicssetresetenable = common dso_local global i8* null, align 8
@GRREGWRMODE = common dso_local global i32 0, align 4
@oldgraphicsmode = common dso_local global i8* null, align 8
@GRREGMISC = common dso_local global i32 0, align 4
@oldgraphicsmisc = common dso_local global i8* null, align 8
@GRREGREADMAPSEL = common dso_local global i32 0, align 4
@oldgraphicsreadmapsel = common dso_local global i8* null, align 8
@SEQUENCER = common dso_local global i32 0, align 4
@SQREGMAPMASK = common dso_local global i32 0, align 4
@oldsqregmapmask = common dso_local global i8* null, align 8
@SQREGMEMORY = common dso_local global i32 0, align 4
@oldsqregmemory = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @map_font_memory() #0 {
  %1 = load i32, i32* @GRAPHICS, align 4
  %2 = load i32, i32* @GRREGENABLESETRESET, align 4
  %3 = call i8* @read_vga_reg(i32 %1, i32 %2)
  store i8* %3, i8** @oldgraphicssetresetenable, align 8
  %4 = load i32, i32* @GRAPHICS, align 4
  %5 = load i32, i32* @GRREGWRMODE, align 4
  %6 = call i8* @read_vga_reg(i32 %4, i32 %5)
  store i8* %6, i8** @oldgraphicsmode, align 8
  %7 = load i32, i32* @GRAPHICS, align 4
  %8 = load i32, i32* @GRREGMISC, align 4
  %9 = call i8* @read_vga_reg(i32 %7, i32 %8)
  store i8* %9, i8** @oldgraphicsmisc, align 8
  %10 = load i32, i32* @GRAPHICS, align 4
  %11 = load i32, i32* @GRREGREADMAPSEL, align 4
  %12 = call i8* @read_vga_reg(i32 %10, i32 %11)
  store i8* %12, i8** @oldgraphicsreadmapsel, align 8
  %13 = load i32, i32* @SEQUENCER, align 4
  %14 = load i32, i32* @SQREGMAPMASK, align 4
  %15 = call i8* @read_vga_reg(i32 %13, i32 %14)
  store i8* %15, i8** @oldsqregmapmask, align 8
  %16 = load i32, i32* @SEQUENCER, align 4
  %17 = load i32, i32* @SQREGMEMORY, align 4
  %18 = call i8* @read_vga_reg(i32 %16, i32 %17)
  store i8* %18, i8** @oldsqregmemory, align 8
  %19 = load i32, i32* @GRAPHICS, align 4
  %20 = load i32, i32* @GRREGENABLESETRESET, align 4
  %21 = call i32 @write_vga_reg(i32 %19, i32 %20, i32 0)
  %22 = load i32, i32* @GRAPHICS, align 4
  %23 = load i32, i32* @GRREGREADMAPSEL, align 4
  %24 = call i32 @write_vga_reg(i32 %22, i32 %23, i32 2)
  %25 = load i32, i32* @GRAPHICS, align 4
  %26 = load i32, i32* @GRREGWRMODE, align 4
  %27 = call i32 @write_vga_reg(i32 %25, i32 %26, i32 0)
  %28 = load i32, i32* @GRAPHICS, align 4
  %29 = load i32, i32* @GRREGMISC, align 4
  %30 = call i32 @write_vga_reg(i32 %28, i32 %29, i32 4)
  %31 = load i32, i32* @SEQUENCER, align 4
  %32 = load i32, i32* @SQREGMAPMASK, align 4
  %33 = call i32 @write_vga_reg(i32 %31, i32 %32, i32 4)
  %34 = load i32, i32* @SEQUENCER, align 4
  %35 = load i32, i32* @SQREGMEMORY, align 4
  %36 = call i32 @write_vga_reg(i32 %34, i32 %35, i32 7)
  ret void
}

declare dso_local i8* @read_vga_reg(i32, i32) #1

declare dso_local i32 @write_vga_reg(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
